gccida/c1/resolve_unique_section
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_unique_section/src/varasm.c:967:40: error: use of undeclared identifier 'resolve_unique_section_prefixes'
v7 = *( const char *const *)( ( char *)resolve_unique_section_prefixes[v4] 
                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/resolve_unique_section/src/obj/varasm.o] Error 1
